MDC logging, deps updates, misc improvements (#33)