@@ -45,34 +45,3 @@ tasks.named('jar') {
 springBoot {
     buildInfo()
 }
-
-
-// tests configuration
-tasks.named('test') {
-    useJUnitPlatform()
-    finalizedBy jacocoTestReport
-}
-tasks.named('jacocoTestReport') {
-    dependsOn test
-}
-
-// enable preview features
-final PREVIEW_OPTION = '--enable-preview'
-tasks.withType(JavaCompile).each {
-    it.options.compilerArgs.add(PREVIEW_OPTION)
-}
-tasks.withType(JavaExec).each {
-    it.jvmArgs([PREVIEW_OPTION])
-}
-tasks.withType(Test).each {
-    it.jvmArgs([PREVIEW_OPTION])
-}
-
-// JVM memory tuning
-tasks.withType(JavaExec).each {
-    it.jvmArgs([
-            '-XX:+HeapDumpOnOutOfMemoryError',
-            '-XX:MaxMetaspaceSize=128m',
-            '-Xmx512m',
-    ])
-}
